--- a/src/main/java/uiux/empleado/interfaceEmpleado.form
+++ b/src/main/java/uiux/empleado/interfaceEmpleado.form
@@ -348,6 +348,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btn_addActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
