--- a/src/main/java/uiux/empleado/agregarEmpleado.form
+++ b/src/main/java/uiux/empleado/agregarEmpleado.form
@@ -53,7 +53,7 @@
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" attributes="0">
                       <EmptySpace min="-2" pref="43" max="-2" attributes="0"/>
-                      <Component id="jLabel1" pref="323" max="32767" attributes="0"/>
+                      <Component id="titulo" pref="323" max="32767" attributes="0"/>
                       <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
                   </Group>
               </Group>
@@ -74,7 +74,7 @@
               <Group type="103" rootIndex="1" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+                      <Component id="titulo" min="-2" max="-2" attributes="0"/>
                       <EmptySpace pref="33" max="32767" attributes="0"/>
                   </Group>
               </Group>
@@ -82,7 +82,7 @@
         </DimensionLayout>
       </Layout>
       <SubComponents>
-        <Component class="javax.swing.JLabel" name="jLabel1">
+        <Component class="javax.swing.JLabel" name="titulo">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Sitka Text" size="24" style="0"/>
@@ -249,13 +249,11 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="102" attributes="0">
                               <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                                  <Group type="103" alignment="0" groupAlignment="0" max="-2" attributes="0">
-                                      <Component id="txtNombre11" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtNombre10" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtNombre12" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtNombre13" alignment="0" max="32767" attributes="0"/>
-                                      <Component id="txtNombre14" alignment="0" max="32767" attributes="0"/>
-                                  </Group>
+                                  <Component id="txtNombre11" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtNombre10" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtNombre12" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtNombre13" alignment="0" max="32767" attributes="0"/>
+                                  <Component id="txtNombre14" alignment="0" max="32767" attributes="0"/>
                                   <Component id="tipo_puesto" alignment="0" pref="177" max="32767" attributes="0"/>
                                   <Component id="caja_num_tel" alignment="0" max="32767" attributes="0"/>
                                   <Component id="caja_fecha_nac" alignment="0" max="32767" attributes="0"/>
@@ -405,7 +403,7 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="btn_agregar_empleado" alignment="1" min="-2" pref="31" max="-2" attributes="0"/>
                           <Component id="btn_cancelar" alignment="1" min="-2" pref="31" max="-2" attributes="0"/>
                       </Group>
