--- a/src/main/java/uiux/empleado/interfaceEmpleado.form
+++ b/src/main/java/uiux/empleado/interfaceEmpleado.form
@@ -165,7 +165,7 @@
               <Font name="Sitka Text" size="48" style="0"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="Nombre de la tabla"/>
+            <Property name="text" type="java.lang.String" value="Empleados"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
