--- a/src/main/java/uiux/Login.form
+++ b/src/main/java/uiux/Login.form
@@ -260,6 +260,7 @@
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField1">
               <Properties>
+                <Property name="text" type="java.lang.String" value="EMP001"/>
                 <Property name="toolTipText" type="java.lang.String" value="-,mnm,n"/>
               </Properties>
               <Events>
@@ -267,6 +268,9 @@
               </Events>
             </Component>
             <Component class="javax.swing.JTextField" name="jTextField2">
+              <Properties>
+                <Property name="text" type="java.lang.String" value="123456"/>
+              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField2ActionPerformed"/>
               </Events>
@@ -289,9 +293,9 @@
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="3">
-                    <StringItem index="0" value="Cliente"/>
-                    <StringItem index="1" value="Propietario"/>
-                    <StringItem index="2" value="Empleado"/>
+                    <StringItem index="0" value="Empleado"/>
+                    <StringItem index="1" value="Cliente"/>
+                    <StringItem index="2" value="Propietario"/>
                   </StringArray>
                 </Property>
               </Properties>
